Some more titles

--- a/TGC/localisation/00_tech-schools.csv
+++ b/TGC/localisation/00_tech-schools.csv
@@ -1,18 +1,31 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
-army_tech_school;Military-Industrial Complex;;;;;;;;;;;;;x
-chinese_tech_school;The Three Principles of the People;;;;;;;;;;;;;x
-commerce_tech_school;Business Schools & Tycoon Capitalism;;;;;;;;;;;;;x
-culture_tech_school;Avantgarde Intelligentsia;;;;;;;;;;;;;x
-czech_tech_school;Å koda Works;;;;;;;;;;;;;x
-industrial_tech_school;Corporative Industrialism;;;;;;;;;;;;;x
-japanese_tech_school;Shukensen-Riekisen Doctrine;;;;;;;;;;;;;x
-naval_tech_school;Sea Power & The Merchant Marine;;;;;;;;;;;;;x
-prussian_tech_school;Junkers, Heer & Krupp;;;;;;;;;;;;;x
-unciv_tech_school;Developing Academia;;;;;;;;;;;;;x
+ts_army;Military-Industrial Complex;;;;;;;;;;;;;x
+ts_chinese;The Three Principles of the People;;;;;;;;;;;;;x
+ts_commerce;Business Schools & Tycoon Capitalism;;;;;;;;;;;;;x
+ts_culture;Avantgarde Intelligentsia;;;;;;;;;;;;;x
+ts_czech;Å koda Works;;;;;;;;;;;;;x
+ts_industrial;Corporative Industrialism;;;;;;;;;;;;;x
+ts_japanese;Shukensen-Riekisen Doctrine;;;;;;;;;;;;;x
+ts_naval;Sea Power & The Merchant Marine;;;;;;;;;;;;;x
+ts_prussian;Junkers, Heer & Krupp;;;;;;;;;;;;;x
 PLACEHOLDER_TITLE_INFO;Below are localisation for the title system which repurposes the vanilla techschool system.;;;;;;;;;;;;;x
 traditional_academic;Recognized Nation;;;;;;;;;;;;;x
 title_world_bearers;World Bearers;;;;;;;;;;;;;x
 title_neutral_nation;Neutral Nation;;;;;;;;;;;;x
 title_unrecognized_nation;Unrecognized Nation;;;;;;;;;;;;x
+title_home_of_the_revolution;Home of the Revolution;;;;;;;;;;;;x
+title_pax_britannica;Pax Britannica;;;;;;;;;;;;x
+title_empire_strikes_back;The Empire Strikes Back;;;;;;;;;;;;x
+title_jewel_in_the_crown;Jewel in the Crown;;;;;;;;;;;;x
+title_crown_from_the_gutter;Crowned from the Gutter;;;;;;;;;;;;x
+title_aeiou;Austriae est imperare orbi universo;;;;;;;;;;;;x
+title_gendarme_of_europe;Gendarme of Europe;;;;;;;;;;;;x
+title_third_rome;Third Rome;;;;;;;;;;;;x
+title_plus_ultra;Plus Ultra;;;;;;;;;;;;x
 colossus_of_the_south;Colossus of the South;;;;;;;;;;;;x
+title_land_of_the_free;Land of the Free;;;;;;;;;;;;x
+title_arsenal_of_democracy;Arsenal of Democracy;;;;;;;;;;;;x
+title_house_divided;A House Divided;;;;;;;;;;;;x
+title_new_world_order;New World Order;;;;;;;;;;;;x
 title_lone_star;Lone Star State;;;;;;;;;;;;x
+title_golden_state;Golden State;;;;;;;;;;;;x
