--- a/TGC/localisation/00_tech-schools.csv
+++ b/TGC/localisation/00_tech-schools.csv
@@ -8,6 +8,7 @@ ts_industrial;Corporative Industrialism;;;;;;;;;;;;;x
 ts_japanese;Shukensen-Riekisen Doctrine;;;;;;;;;;;;;x
 ts_naval;Sea Power & The Merchant Marine;;;;;;;;;;;;;x
 ts_prussian;Junkers, Heer & Krupp;;;;;;;;;;;;;x
+ts_traditional;Traditional Academia;;;;;;;;;;;;;x
 PLACEHOLDER_TITLE_INFO;Below are localisation for the title system which repurposes the vanilla techschool system.;;;;;;;;;;;;;x
 traditional_academic;Recognized Nation;;;;;;;;;;;;;x
 title_world_bearers;World Bearers;;;;;;;;;;;;;x
