--- a/TGC/localisation/00_tech-schools.csv
+++ b/TGC/localisation/00_tech-schools.csv
@@ -1,14 +1,24 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
 ts_army;Military-Industrial Complex;;;;;;;;;;;;;x
+ts_army_desc;Cooperation between private industrialists and the military, on the issues of national defense and war policy, have led to the development of a particularly important web of connections, personal ties and acquaintances, with just an ever so slight hint of corruption, that can best be described as a Military-Industrial Complex. By furthering the goals and ambitions of these informal networks within our academia, we boost industrial and military research, at the expense of navy and culture.;;;;;;;;;;;;;x
 ts_chinese;The Three Principles of the People;;;;;;;;;;;;;x
+ts_chinese_desc;;;;;;;;;;;;;;x
 ts_commerce;Business Schools & Tycoon Capitalism;;;;;;;;;;;;;x
+ts_commerce_desc;Our country has under the past years come increasingly under the sway of select cliques of people who have all been educated at the same, or similar, elite business schools and companies. By supporting these groups, we can ensure that our academia's focus lies where it matters: in the fields of commerce and industry. This, however, comes at the expense of other fields of research.;;;;;;;;;;;;;x
 ts_culture;Avantgarde Intelligentsia;;;;;;;;;;;;;x
+ts_culture_desc;A cultural and ideological avantgarde within our country has, during the past years, been undertaking a long march through our academic institutions. By steadily working their way up the rungs of the academic ladder, these radical new ideologues are now in a position to completely subvert our academic institutions to better suit their ideological agenda. By supporting their cause we increase the speed of our cultural research, to the detriment, however, of other spheres of intellectual progress.;;;;;;;;;;;;;x
 ts_czech;Å koda Works;;;;;;;;;;;;;x
+ts_czech_desc;;;;;;;;;;;;;;x
 ts_industrial;Corporative Industrialism;;;;;;;;;;;;;x
+ts_industrial_desc;Capital and government in our country have, for some time, been doing their utmost to weave between them an intricate web of personal relations, that has increasingly come to assume the forms of a symbiotic relationship of mutual dependence. By further promoting these connections between the public and private spheres of our society we vastly increase our technological progress in the fields of industry at the expense, however, of research in other fields.;;;;;;;;;;;;;x
 ts_japanese;Shukensen-Riekisen Doctrine;;;;;;;;;;;;;x
+ts_japanese_desc;;;;;;;;;;;;;;x
 ts_naval;Sea Power & The Merchant Marine;;;;;;;;;;;;;x
+ts_naval;It has been said that the best way to get ahead in our country is to go via the naval schools. Much of our country's military and political elites have been educated navy men, or have served in the merchant marine. The navy's importance for a seafaring country like our own cannot be underestimated, and by promoting these groups and backgrounds politically, we ensure that our naval technology will develop at an increased rate, at the expense, however, of other fields of research.;;;;;;;;;;;;;x
 ts_prussian;Junkers, Heer & Krupp;;;;;;;;;;;;;x
+ts_prussian_desc;;;;;;;;;;;;;;x
 ts_traditional;Traditional Academia;;;;;;;;;;;;;x
+ts_traditional_desc;Our Academic Circles are unbiased.;;;;;;;;;;;;;x
 PLACEHOLDER_TITLE_INFO;Below are localisation for the title system which repurposes the vanilla techschool system.;;;;;;;;;;;;;x
 traditional_academic;Recognized Nation;;;;;;;;;;;;;x
 title_world_bearers;World Bearers;;;;;;;;;;;;;x
