Second Serbian Uprising
I should probably make a less punitive serbian scripted treaty soon? Make one where serbia doesnt get a complete wet dream and ousts the Turks from the balkans altogether

--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3593,3 +3593,5 @@ dismantle_latin_union_desc;Our armies triumphantly march through Torino, Paris a
 dismantle_latin_union_title;Dismantle Latin Union;;;;;;;;;;;;;x
 dismantle_german_confederation_desc;Our armies triumphantly march through Berlin, Vienna and Frankfurt. t is time to put this creation of the Devil himself to rest and dismantle it into several smaller states.;;;;;;;;;;;;;x
 dismantle_german_confederation_title;Dismantle the German Confederation;;;;;;;;;;;;;x
+serbian_total_victory_title;The Treaty of Sarajevo;;;;;;;;;;;;;x
+serbian_total_victory_desc;Should Serbia press its advantage against the Ottomans hard enough, the Ottomans could be forced to vacate the Balkans altogether. This, however, is little more than a pipe dream. Holding out hope for such an arrangement is probably a poor idea.;;;;;;;;;;;;;x
