--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -47,7 +47,7 @@ break_line_tool_tip_multiple;§!\n\n\n\n\n\n;;;;;;;;;;;;x
 ban_slave_trade;§GBans§! Slave Trade.§b;;;;;;;;;;;;x
 end_game;§YEnd Game§! and §YSee Score§!.§b;;;;;;;;;;;;x
 continue_to_play;§GContinue§! to play.§b;;;;;;;;;;;;x
-violate_neutrality;§RViolates§! the target's §GNeutrality§!. This will be meet with severe consequences by the International Community.§b;;;;;;;;;;;;x
+become_neutral;Become §BNeutral§!.§b;;;;;;;;;;;;x
 brz_politics_improve;§!This will §Gimprove§! the Political Landscape for Abolition.§b;;;;;;;;;;;;x
 brz_politics_worsen;§!This will §Rworsen§! the Political Landscape for Abolition.§b;;;;;;;;;;;;x
 brz_economics_improve;§!This will §Gimprove§! the Economical Landscape for Abolition.§b;;;;;;;;;;;;x
