--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3595,3 +3595,5 @@ dismantle_german_confederation_desc;Our armies triumphantly march through Berlin
 dismantle_german_confederation_title;Dismantle the German Confederation;;;;;;;;;;;;;x
 serbian_total_victory_title;The Treaty of Sarajevo;;;;;;;;;;;;;x
 serbian_total_victory_desc;Should Serbia press its advantage against the Ottomans hard enough, the Ottomans could be forced to vacate the Balkans altogether. This, however, is little more than a pipe dream. Holding out hope for such an arrangement is probably a poor idea.;;;;;;;;;;;;;x
+serbian_realistic_victory_title;The Treaty of Belgrade;;;;;;;;;;;;;x
+serbian_realistic_victory_desc;Should Serbia manage to keep the Ottomans at bay for long enough, and expand their rebellion to more provinces in the Balkans, the Ottomans will be forced to acknowledge a truly independent Serbian state encompassing its historical ethnic and national borders. This will be a tall ask for the rebolutionaries, but to succeed would be a grand prize for the nationalists.;;;;;;;;;;;;;x
