Some Sicily Content

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1403,3 +1403,16 @@ EVTDESC9035;Despite negotiations breaking down, the Ottoman military was able to
 EVTOPTA9035;Order has been restored.;;;;;;;;;;;;;x
 EVTNAME9036;The Treaty of Belgrade;;;;;;;;;;;;;x
 EVTDESC9036;The Treaty of Belgrade was signed between the Serbian revolutionaries and the Ottoman government, presided over by the Russian Empire. After continued military failures against the Serbian military, and the threat of further rebellions rising up against Ottoman rule in the Balkans, the Ottomans were forced to accept the cession of large sections of their Balkan empire to a new Serbian kingdom. The lands of Bosnia, Serbia, and what remained of Ottoman Montenegro were ceded to the Serbian state, in exchange for the cessation of hostilities between the two states. This proved to be a stark humiliation for the Ottoman state, and a true sign of its impending decline.;;;;;;;;;;;;;x
+EVTNAME9037;The Last Chapter of the Neapolitan War;;;;;;;;;;;;;x
+EVTDESC9037;In the aftermath of the defeat at Scapezzano, the Neapolitan army of Murat lost its cohesion and morale, and not long after was forced to surrender the nation to the Coalition forces outside Naples on the 20th of May. Murat in turn fled to Corsica, evading prosecution for the time being. In October, however, he landed in Pizzo, Calabria with 200 men at his command in a last bid for power, gambling that he could pull off precisely that which Napoleon had done when he escaped Elba.;;;;;;;;;;;;;x
+EVTOPTA9037;Arrest this madman!;;;;;;;;;;;;;x
+EVTOPTB9037;The gamble pays off!;;;;;;;;;;;;;x
+EVTNAME9038;The execution of Murat;;;;;;;;;;;;;x
+EVTDESC9038;Coming back from exile, Murat landed with 28 men at Pizzo, Calabria on 8 October 1815. However, unlike Napoleon months earlier, Murat was not greeted with a warm welcome and was soon captured by Bourbon troops. Five days after he landed at Pizzo, he was executed in the town's castle, exhorting the firing squad to spare his face. This ended the final chapter of the Neapolitan Wars.;;;;;;;;;;;;;x 
+EVTOPTA9038;The Traitor Dies;;;;;;;;;;;;;x
+EVTNAME9039;The Neapolitan Civil War;;;;;;;;;;;;;x
+EVTDESC9039;Coming back from exile, Murat landed with 28 men at Pizzo, Calabria on 8 October 1815. Like Napoleon months before, Murat was given a warm welcome by the soldiers that were initially sent to enact his arrest. A week after he landed at Pizzo, a hasty coronation ceremony was acted out in the city of Naples, proclaiming him the sole King of Sicily once more, exhorting the values of a national, united Italy. The Neapolitan Wars have begun once again, and the fate of Italy hangs in the balance.;;;;;;;;;;;;;x
+EVTOPTA9039;This is an outrage!;;;;;;;;;;;;;x
+EVTNAME9040;The Kingdom of Two Sicilies;;;;;;;;;;;;;x
+EVTDESC9040;The Treaty of Casalanza restored Ferdinand IV of Bourbon to the throne of Naples and the island of Sicily (where the constitution of 1812 virtually had disempowered him) was returned to him. In 1816 he annulled the constitution and Sicily became fully reintegrated into the new state, which was now officially called the Regno delle Due Sicilie (Kingdom of Two Sicilies). Ferdinand IV became Ferdinand I.;;;;;;;;;;;;;x
+EVTOPTA9040;Proclaim the Kingdom United!;;;;;;;;;;;;;x
