--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1416,3 +1416,6 @@ EVTOPTA9039;This is an outrage!;;;;;;;;;;;;;x
 EVTNAME9040;The Kingdom of Two Sicilies;;;;;;;;;;;;;x
 EVTDESC9040;The Treaty of Casalanza restored Ferdinand IV of Bourbon to the throne of Naples and the island of Sicily (where the constitution of 1812 virtually had disempowered him) was returned to him. In 1816 he annulled the constitution and Sicily became fully reintegrated into the new state, which was now officially called the Regno delle Due Sicilie (Kingdom of Two Sicilies). Ferdinand IV became Ferdinand I.;;;;;;;;;;;;;x
 EVTOPTA9040;Proclaim the Kingdom United!;;;;;;;;;;;;;x
+EVTNAME9041;The capture of Sicily!;;;;;;;;;;;;;x
+EVTDESC9041;The return of Murat from exile brought a great deal of fear to the international stage, in no small part due to his reputation as a great Napoleonic commander. This reputation was not diminished by his monumental victory against the Bourbons. The nature of his victory caught the Concert of Europe off-guard, in the midst of peacetime demobilization, and in the face of global expectation of his failure. A proper coronation was held in Naples, following up the ad-hoc ceremony in 1815, and reaffirming his dedication to a united Italian peninsula, to cheering crowds within the city.;;;;;;;;;;;;;x
+EVTOPTA9041;Where Napoleon failed, Murat succeeded.;;;;;;;;;;;;;x
