Might as well add the HRE as an alternate name

--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1021,6 +1021,7 @@ GAZ_absolute_monarchy;Gaza Empire;;;;;;;;;;;;;x
 GBU_absolute_monarchy;Kaabu Empire;;;;;;;;;;;;;x
 GBU_democracy;Guinea-Bissau;;;;;;;;;;;;;x
 GCF_absolute_monarchy;German Confederation;;;;;;;;;;;;;x
+GCF_absolute_monarchy2;Holy Roman Empire;;;;;;;;;;;;;x
 GCF_fascist_dictatorship;German Reich;;;;;;;;;;;;;x
 GCF_hms_government;German Confederation;;;;;;;;;;;;;x
 GCF_proletarian_dictatorship;German People’s Republic;Der Deutsch Volksrepublik;Der Deutsch Volksrepublik;;;;;;;;;;;x
