--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -951,10 +951,13 @@ DUR_fascist_dictatorship;Durrani Republic;;;;;;;;;;;;;x
 DUR_hms_government;Durrani Empire;;;;;;;;;;;;;x
 DUR_prussian_constitutionalism;Durrani Empire;;;;;;;;;;;;;x
 EGY_absolute_monarchy;Sultanate of Egypt;;;;;;;;;;;;;x
+EGY_absolute_monarchy2;Mamluk Sultanate;;;;;;;;;;;;;x
 EGY_colonial_company;Khedivate of Egypt;;;;;;;;;;;;;x
 EGY_democracy;Republic of Egypt;;;;;;;;;;;;;x
 EGY_hms_government;Egyptian Kingdom;;;;;;;;;;;;;x
+EGY_hms_government2;Mamluk Sultanate;;;;;;;;;;;;;x
 EGY_prussian_constitutionalism;Egyptian Kingdom;;;;;;;;;;;;;x
+EGY_prussian_constitutionalism2;Sultanate of Egypt;;;;;;;;;;;x
 EIC_absolute_monarchy;Empire of East Indies;;;;;;;;;;;;;x
 EIC_hms_government;Empire of East Indies;;;;;;;;;;;;;x
 EIC_prussian_constitutionalism;Empire of East Indies;;;;;;;;;;;;;x
