Redid Kovno, Vilna, and Grodno Governate borders

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -359,7 +359,7 @@ PROV357;Mitau;;;;;;;;;;;;;x
 PROV358;Windawa;;;;;;;;;;;;;x
 PROV359;Libau;;;;;;;;;;;;;x
 PROV360;Viljna;;;;;;;;;;;;;x
-PROV361;Kovno;;;;;;;;;;;;;x
+PROV361;Stokliszki;;;;;;;;;;;;;x
 PROV362;Mariampolj;;;;;;;;;;;;;x
 PROV363;Ponevezhu;;;;;;;;;;;;;x
 PROV364;Shavli;;;;;;;;;;;;;x
