Added events for Alvensleben Convention

--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -21,12 +21,23 @@ EVTDESC500004;Several days ago, revolts in the Congress Kingdom of Poland broke 
 EVTNAME500004;An Austrian Intervention in Poland?;;;;;;;;;;;;;x
 EVTOPTA500004;Let us seize this momentous opportunity at once!;;;;;;;;;;;;;x
 EVTOPTB500004;We shall send material support, but no more.;;;;;;;;;;;;;x
-EVTOPTC500004;The Poles are a danger to us both. Support $FROMCOUNTRY$.;;;;;;;;;;;;;x
+EVTOPTC500004;Let us stay out of this. Declare our neutrality.;;;;;;;;;;;;;x
+EVTOPTD500004;The Poles are a danger to us both. Support $FROMCOUNTRY$.;;;;;;;;;;;;;x
 EVTDESC500005;Our scouts on the border report that the Congress Kingdom of Poland is in a state ot total revolt, alongside their allies in Lithuania. A Polish National Government has been formed, and is rapidly assembling a force to fight those of $FROMCOUNTRY$. While the entirety of the Grand Duchy of Posen have been incorporated into the Kingdom of Prussia proper, our Polish subjects have become significantly rowdier of late, and some are even demanding reuniting Posen with Poland.\n While normally we would just offer token support to our Holy Alliance ally, the growing rift between them and our Austrian neighbors poses an opportunity to split the two, opening the door to a $COUNTRY_ADJ$-led unification of Germany. The Russians have approached us regarding a joint agreement to collaborate against the rebels, and some of our top officials have suggested sending to St. Petersburg the distinguished General Gustav von Alvensleben to negotiate the exact terms. However, the more liberal members of our government wish for us to take a more moderate approach, and the most radical have even suggested supporting the Poles against $FROMCOUNTRY$! It is undeniable that the $MONTH$ Uprising is a grand opportunity for $COUNTRY$, no matter who we support. What shall we do, my King?
 EVTNAME500005;The Alvensleben Proposal
 EVTOPTA500005;Dispatch General Alvensleben!
 EVTOPTB500005;Let us avoid offending Europe.
 EVTOPTC500005;Perhaps a realignment of our foreign policy is in order...
+EVTDESC500006;Recently, the Prussian General Carl von Alvensleben arrived in St. Petersburg, regarding the matter of the $MONTH$ Uprising in our Polish territories. With the other European Great Powers increasingly turning against us, he and the Prussian government have come with an offer: that $FROMCOUNTRY$ and $COUNTRY$ sign an agreement to cooperate against the Polish rebels. With our traditional Austrian allies having betrayed us during the Crimean War, this offer comes at an essential time for $FROMCOUNTRY$, especially with the French pushing for an Europe-wide intervention. However, this would also significantly enhance the position of $FROMCOUNTRY$, placing them in a significantly more robust position to accomplish their goals of uniting Germany. Shall we sign the Convention, my emperor?;;;;;;;;;;;;;x
+EVTNAME500006;The Alvensleben Proposal;;;;;;;;;;;;;x
+EVTOPTA500006;Let us sign it at once.;;;;;;;;;;;;;x
+EVTOPTB500006;We shall do no such thing!;;;;;;;;;;;;;x
+EVTNAME500007;General Carl von Alvensleben has returned victorious from St. Petersburg, treaty in hand. The Russians have accepted our deal for mutual military access and an alliance against the Polish rebels.;;;;;;;;;;;;;x
+EVTDESC500007;The Alvensleben Convention - Accepted;;;;;;;;;;;;;x
+EVTOPTA500007;Excellent.;;;;;;;;;;;;;x
+EVTDESC500008;In a secret meeting with top $COUNTRY_ADJ$ officials, General Carl von Alvensleben has notified us that $FROMCOUNTRY$ has rejected our generous offer of joint action against the Poles. It seems that $FROMCOUNTRY$ is confident in their ability to defeat the rebels despite threats of foreign intervention.;;;;;;;;;;;;;x
+EVTNAME500008;The Alvensleben Convention - Declined;;;;;;;;;;;;;x
+EVTOPTA500008;We are helpless in the face of stupidity.;;;;;;;;;;;;;x
 EVTDESC500003;Traugutt, the insurrection general, and four other members of the Polish Government were apprehended by $COUNTRY_ADJ$ troops and executed at the Warsaw citadel. In the course of the war several battles and skirmishes were fought and some twenty-five thousand Poles were killed. The $COUNTRY_ADJ$ $MONARCHTITLE$ passed laws and edicts to make the land an integral part of $COUNTRY$’s territory and all that remains now is to decide the fate of the rebels.;;;;;;;;;;;;;x
 EVTNAME500003;The Polish Rebellion is Crushed;;;;;;;;;;;;;x
 EVTOPTA500003;There will be harsh reprisals.;;;;;;;;;;;;;x
