tidied up intervention

--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -41,33 +41,41 @@ EVTDESC500009;Today, we recieved a collective note of protest from several other
 EVTNAME500009;The Paris Conference;;;;;;;;;;;;;x
 EVTOPTA500009;$COUNTRY$ shall not bow to anyone!;;;;;;;;;;;;;x
 EVTOPTB500009;We have no choice but to accede to their demands.;;;;;;;;;;;;;x
-EVTDESC500011;Traugutt, the insurrection general, and four other members of the Polish Government were apprehended by $COUNTRY_ADJ$ troops and executed at the Warsaw citadel. In the course of the war several battles and skirmishes were fought and some twenty-five thousand Poles were killed. The $COUNTRY_ADJ$ $MONARCHTITLE$ passed laws and edicts to make the land an integral part of $COUNTRY$'s territory and all that remains now is to decide the fate of the rebels.;;;;;;;;;;;;;x
-EVTNAME500011;The Polish Rebellion is Crushed;;;;;;;;;;;;;x
-EVTOPTA500011;There will be harsh reprisals.;;;;;;;;;;;;;x
-EVTOPTB500011;Be lenient with them.;;;;;;;;;;;;;x
-EVTDESC500012;For too long the lands of Poland have been partitioned and divided among imperialistic foreigners. No more! Today, we shake off the remnants of foreign rule from our country, paving the way for the future of Poland.;;;;;;;;;;;;;x
-EVTNAME500012;A Polish State;;;;;;;;;;;;;x
-EVTOPTA500012;We will unite!;;;;;;;;;;;;;x
-EVTOPTB500012;We enjoy independence too much.;;;;;;;;;;;;;x
-EVTDESC500013;As the Polish State we need to protect all our citizens in the west. Polish people lived in Poznan, Silesia, Pomerania and Luzica for centuries and these parts are a rightful and core part of our country.;;;;;;;;;;;;;x
-EVTNAME500013;United Poland;;;;;;;;;;;;;x
-EVTOPTA500013;For a united Poland!;;;;;;;;;;;;;x
-EVTDESC500014;After the Revolution in Berlin succeeded during the Spring of Nations, newly freed Polish prisoners joined the Berlin Home Guard by founding a “Polish Legion”, and were armed with weapons from the Prussian arsenal. A Pole waved the black, red, and gold flag of the German Revolution and the prisoners were celebrated by the public. Speeches were made about a joint fight against the Russians for a free and united Germany and an independent Poland. Many were under the impression that all of Prussia wanted a free Poland to serve as a shield against Russia and that the Polish question would soon be resolved. However, after a while, the atmosphere among the Germans and a portion of the Jewish population began to change dramatically at the first signs of violence by the Poles. In a matter of days revolutionary sentiment had risen throughout the entire Duchy of Posen. Polish nobility and peasantry took up arms, preparing for a confrontation with the Prussian Army, Prussian symbols were torn down, and in couple of places fighting erupted against German colonists. The revolt had begun.;;;;;;;;;;;;;x
-EVTNAME500014;The Greater Poland Uprising;;;;;;;;;;;;;x
-EVTOPTA500014;Death to the rebels!;;;;;;;;;;;;;x
-EVTOPTB500015;It isn't worth the fight.;;;;;;;;;;;;;x
-EVTOPTC500015;Onwards to Poznan!;;;;;;;;;;;;;x
-EVTDESC500016;As expected, our mighty forces have crushed this little 'rebellion' and restored our rightful rule in the former territories of the Commonwealth. As we have triumphed, we have no reason not to incorporate these lands wholesale into the territory of $COUNTRY$. From now on, the Polish lands, or now Privislinskiy Krai, shall be directly ruled by our capable administrators.;;;;;;;;;;;;;x
-EVTNAME500016;Russian Victory in Poland;;;;;;;;;;;;;x
-EVTOPTA500016;$COUNTRY$ is victorious, as we should.;;;;;;;;;;;;;x
-EVTDESC500017;After our Polish subjects raised the banner of rebellion, the old territories of the Grand Duchy quickly became restless, demanding their own concessions. Today, these have finally tipped over, and the result is clear - a full-scale rebellion, spanning from Palanga on the Baltic Sea, to Kyiv, the largest city in Ukraine. Even in Byelorussia and Latvia, the flames of rebellion grow ever higher, and our officers in the area demand an immediate response to these traitors.\n The goal of this great rebellion in our western territories is clear - the reversal of the Polish Partitions and the restoration of the Polish-Lithuanian Commonwealth to the European scene. The General-Gubernator of the Northwestern Krai (Vilna, Kovno, Grodno, Minsk, Mogilev, and Vitebsk) has requested immediate backup to crush these fools.;;;;;;;;;;;;;x
-EVTNAME500017;The Uprising Spreads to the Northwest;;;;;;;;;;;;;x
-EVTOPTA500017;The situation is deteriorating, and deteriorating fast.;;;;;;;;;;;;;x
-EVTOPTB500017;Onwards to Lithuania!;;;;;;;;;;;;;x
-EVTDESC500018;With both the core lands of the Kingdom of Poland and the Grand Duchy in full revolt, other malcontents have seen fit to join these traitors in their foolish rebellion to restore the old Commonwealth. Our garrisons in West Ukraine have been quickly overwhelmed, and the General-Gubernator of the Southwestern Krai (Kiev, Podolia and Volhynia) has requested immediate support to crush this rebellion.;;;;;;;;;;;;;x
-EVTNAME500018;The Uprising Spreads to the Southwest;;;;;;;;;;;;;x
-EVTOPTA500018;Death to the rebels! Long live the Tsar!;;;;;;;;;;;;;x
-EVTOPTB500018;This is unwinnable. We must let them go.;;;;;;;;;;;;;x
+EVTDESC500010;While we have committed ourselves to the defense of the Poles against the Russians, we must consider the fact that we do not border either of the two, placing us in a difficult position. Both the Polish and our own people are demanding that we send actual military aid to the Uprising, and if we don't, we will be placed in a difficult position. However, if the Germans were to give us access, then we could easily help our allies, and possibly even rope them into the intervention. Shall we send our demand for military access, my emperor?;;;;;;;;;;;;;x
+EVTNAME500010;A Path to Poland;;;;;;;;;;;;;x
+EVTOPTA500010;Send the demand!;;;;;;;;;;;;;x
+EVTOPTB500010;We can support the Poles without provoking a war.;;;;;;;;;;;;;x
+EVTDESC500011;;;;;;;;;;;;;;x
+EVTNAME500011;The French Demand;;;;;;;;;;;;;x
+EVTOPTA500011;We have no choice but to accept.;;;;;;;;;;;;;x
+EVTOPTB500011;If they want to it, they can pry it from our cold, dead hands!;;;;;;;;;;;;;x
+EVTDESC5000110;Traugutt, the insurrection general, and four other members of the Polish Government were apprehended by $COUNTRY_ADJ$ troops and executed at the Warsaw citadel. In the course of the war several battles and skirmishes were fought and some twenty-five thousand Poles were killed. The $COUNTRY_ADJ$ $MONARCHTITLE$ passed laws and edicts to make the land an integral part of $COUNTRY$'s territory and all that remains now is to decide the fate of the rebels.;;;;;;;;;;;;;x
+EVTNAME5000110;The Polish Rebellion is Crushed;;;;;;;;;;;;;x
+EVTOPTA5000110;There will be harsh reprisals.;;;;;;;;;;;;;x
+EVTOPTB5000110;Be lenient with them.;;;;;;;;;;;;;x
+EVTDESC5000120;For too long the lands of Poland have been partitioned and divided among imperialistic foreigners. No more! Today, we shake off the remnants of foreign rule from our country, paving the way for the future of Poland.;;;;;;;;;;;;;x
+EVTNAME5000120;A Polish State;;;;;;;;;;;;;x
+EVTOPTA5000120;We will unite!;;;;;;;;;;;;;x
+EVTOPTB5000120;We enjoy independence too much.;;;;;;;;;;;;;x
+EVTDESC5000130;As the Polish State we need to protect all our citizens in the west. Polish people lived in Poznan, Silesia, Pomerania and Luzica for centuries and these parts are a rightful and core part of our country.;;;;;;;;;;;;;x
+EVTNAME5000130;United Poland;;;;;;;;;;;;;x
+EVTOPTA5000130;For a united Poland!;;;;;;;;;;;;;x
+EVTDESC5000140;After the Revolution in Berlin succeeded during the Spring of Nations, newly freed Polish prisoners joined the Berlin Home Guard by founding a “Polish Legion”, and were armed with weapons from the Prussian arsenal. A Pole waved the black, red, and gold flag of the German Revolution and the prisoners were celebrated by the public. Speeches were made about a joint fight against the Russians for a free and united Germany and an independent Poland. Many were under the impression that all of Prussia wanted a free Poland to serve as a shield against Russia and that the Polish question would soon be resolved. However, after a while, the atmosphere among the Germans and a portion of the Jewish population began to change dramatically at the first signs of violence by the Poles. In a matter of days revolutionary sentiment had risen throughout the entire Duchy of Posen. Polish nobility and peasantry took up arms, preparing for a confrontation with the Prussian Army, Prussian symbols were torn down, and in couple of places fighting erupted against German colonists. The revolt had begun.;;;;;;;;;;;;;x
+EVTNAME5000140;The Greater Poland Uprising;;;;;;;;;;;;;x
+EVTOPTA5000140;Death to the rebels!;;;;;;;;;;;;;x
+EVTOPTB5000150;It isn't worth the fight.;;;;;;;;;;;;;x
+EVTOPTC5000150;Onwards to Poznan!;;;;;;;;;;;;;x
+EVTDESC5000160;As expected, our mighty forces have crushed this little 'rebellion' and restored our rightful rule in the former territories of the Commonwealth. As we have triumphed, we have no reason not to incorporate these lands wholesale into the territory of $COUNTRY$. From now on, the Polish lands, or now Privislinskiy Krai, shall be directly ruled by our capable administrators.;;;;;;;;;;;;;x
+EVTNAME5000160;Russian Victory in Poland;;;;;;;;;;;;;x
+EVTOPTA5000160;$COUNTRY$ is victorious, as we should.;;;;;;;;;;;;;x
+EVTDESC5000170;After our Polish subjects raised the banner of rebellion, the old territories of the Grand Duchy quickly became restless, demanding their own concessions. Today, these have finally tipped over, and the result is clear - a full-scale rebellion, spanning from Palanga on the Baltic Sea, to Kyiv, the largest city in Ukraine. Even in Byelorussia and Latvia, the flames of rebellion grow ever higher, and our officers in the area demand an immediate response to these traitors.\n The goal of this great rebellion in our western territories is clear - the reversal of the Polish Partitions and the restoration of the Polish-Lithuanian Commonwealth to the European scene. The General-Gubernator of the Northwestern Krai (Vilna, Kovno, Grodno, Minsk, Mogilev, and Vitebsk) has requested immediate backup to crush these fools.;;;;;;;;;;;;;x
+EVTNAME5000170;The Uprising Spreads to the Northwest;;;;;;;;;;;;;x
+EVTOPTA5000170;The situation is deteriorating, and deteriorating fast.;;;;;;;;;;;;;x
+EVTOPTB5000170;Onwards to Lithuania!;;;;;;;;;;;;;x
+EVTDESC5000180;With both the core lands of the Kingdom of Poland and the Grand Duchy in full revolt, other malcontents have seen fit to join these traitors in their foolish rebellion to restore the old Commonwealth. Our garrisons in West Ukraine have been quickly overwhelmed, and the General-Gubernator of the Southwestern Krai (Kiev, Podolia and Volhynia) has requested immediate support to crush this rebellion.;;;;;;;;;;;;;x
+EVTNAME5000180;The Uprising Spreads to the Southwest;;;;;;;;;;;;;x
+EVTOPTA5000180;Death to the rebels! Long live the Tsar!;;;;;;;;;;;;;x
+EVTOPTB5000180;This is unwinnable. We must let them go.;;;;;;;;;;;;;x
 EVTDESC500058;Even though large tracts of land and many old and famous States have fallen or may fall into the grip of the $COUNTRY_ADJ$ and all the odious apparatus of their rule, we shall not flag or fail. We shall go on to the end. We shall fight in Europe, we shall fight on the seas and oceans, we shall fight with growing confidence and growing strength, we shall defend our land and the people of our planet, whatever the cost may be. We shall fight on the beaches, we shall fight on the landing grounds, we shall fight in the fields and in the streets, we shall fight in the hills, we shall never surrender, and if, which I do not for a moment believe, this land or a large part of it were subjugated and starving, then our Empire beyond the seas, armed and guarded by our Fleet, would carry on the struggle, until, in God's good time, the New World, with all its power and might, steps forth to the rescue and the liberation of the old.\n \n With this speech the great powers finished their assembly and vowed to stop us using any means they can.;;;;;;;;;;;;;x
 EVTNAME500058;International Enemy;;;;;;;;;;;;;x
 EVTOPTA500058;Bring them on.;;;;;;;;;;;;;x
