ported regions loc

--- a/TGC/localisation/00_map-regions.csv
+++ b/TGC/localisation/00_map-regions.csv
@@ -98,7 +98,7 @@ RUS_354;Süd Livland;;;;;;;;;;;;;x
 RUS_356;Vitebsk;;;;;;;;;;;;;x
 RUS_357;Kurland;;;;;;;;;;;;;x
 RUS_360;Vilna;;;;;;;;;;;;;x
-RUS_361;Litvá;;;;;;;;;;;;;x
+RUS_361;Kovno;;;;;;;;;;;;;x
 DEN_367;Jylland;;;;;;;;;;;;;x
 HOL_369;Holsten;;;;;;;;;;;;;x
 SCH_370;Slesvig;;;;;;;;;;;;;x
