--- a/TGC/localisation/00_military-traits.csv
+++ b/TGC/localisation/00_military-traits.csv
@@ -1,170 +1,172 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
-able;Able;Capable;Fähig;;;;;;;;;;;x
+able;Able;Capable;FÃ¤hig;;;;;;;;;;;x
 active_p;Active;Actif;Aktiv;;;;;;;;;;;x
-adventurer;Adventurer §G+2 Attack;Aventurier;Abenteurer;;;;;;;;;;;x
-aggressive;Aggressive §W§W+1 Attack;Agressif;Aggressiv;;;;;;;;;;;x
-amateur;Amateur §R-1 Defence;Amateur;Amateur;;;;;;;;;;;x
+adventurer;Adventurer Â§G+2 Attack;Aventurier;Abenteurer;;;;;;;;;;;x
+aggressive;Aggressive Â§WÂ§W+1 Attack;Agressif;Aggressiv;;;;;;;;;;;x
+amateur;Amateur Â§R-1 Defence;Amateur;Amateur;;;;;;;;;;;x
 aristocrat;Aristocrat;Aristocrate;Aristokrat;;;;;;;;;;;x
-armchair_general;Armchair General;Général de façade;Sesselgeneral;;;;;;;;;;;x
+armchair_general;Armchair General;GÃ©nÃ©ral de faÃ§ade;Sesselgeneral;;;;;;;;;;;x
 arrogant;Arrogant;Arrogant;Arrogant;;;;;;;;;;;x
-artillerist;Artillerist §W+1 Defence;Artilleur;Artillerist;;;;;;;;;;;x
-au_fait;Au Fait §B+3 Attack;Au fait;Sicher;;;;;;;;;;;x
-audacious;Audacious §G+2 Attack §G+2 Defence;Audacieux;Kühn;;;;;;;;;;;x
+artillerist;Artillerist Â§W+1 Defence;Artilleur;Artillerist;;;;;;;;;;;x
+au_fait;Au Fait Â§B+3 Attack;Au fait;Sicher;;;;;;;;;;;x
+audacious;Audacious Â§G+2 Attack Â§G+2 Defence;Audacieux;KÃ¼hn;;;;;;;;;;;x
 aweless;Aweless;Casse-cou;Respektlos;;;;;;;;;;;x
-balanced_p;Balanced §W+1 Defence;Pondéré;Ausgewogen;;;;;;;;;;;x
+balanced_p;Balanced Â§W+1 Defence;PondÃ©rÃ©;Ausgewogen;;;;;;;;;;;x
 ballsy;Ballsy;Valeureux;Forsch;;;;;;;;;;;x
-bastard;Bastard §R-1 Defence;Goujat;Bastard;;;;;;;;;;;x
+bastard;Bastard Â§R-1 Defence;Goujat;Bastard;;;;;;;;;;;x
 bg_engineer;Engineer;;;;;;;;;;;;;x
 bigoted;Bigoted;Sectaire;Engstirnig;;;;;;;;;;;x
-bold;Bold §W+1 Attack;Téméraire;Mutig;;;;;;;;;;;x
-bootlicker;Bootlicker §W+1 Defence;Lèche-bottes;Speichellecker;;;;;;;;;;;x
-brash;Brash §W+1 Attack;Impudent;Forsch;;;;;;;;;;;x
+bold;Bold Â§W+1 Attack;TÃ©mÃ©raire;Mutig;;;;;;;;;;;x
+bootlicker;Bootlicker Â§W+1 Defence;LÃ¨che-bottes;Speichellecker;;;;;;;;;;;x
+brash;Brash Â§W+1 Attack;Impudent;Forsch;;;;;;;;;;;x
 brilliant;Brilliant;Brillant;Brilliant;;;;;;;;;;;x
-brownnoser;Brownnoser §W+1 Attack;Lèche-cul;Stiefellecker;;;;;;;;;;;x
-brutish;Brutish §W+1 Attack;Brutal;Brutal;;;;;;;;;;;x
-bureaucrat_speed;Bureaucrat Speed;Vitesse de bureaucrate;Bürokratische Geschwindigkeit;;;;;;;;;;;x
-butcher;Butcher;Boucher;Schlächter;;;;;;;;;;;x
-calm;Calm §R-1 Attack;Calme;Ruhig;;;;;;;;;;;x
+brownnoser;Brownnoser Â§W+1 Attack;LÃ¨che-cul;Stiefellecker;;;;;;;;;;;x
+brutish;Brutish Â§W+1 Attack;Brutal;Brutal;;;;;;;;;;;x
+bureaucrat_speed;Bureaucrat Speed;Vitesse de bureaucrate;BÃ¼rokratische Geschwindigkeit;;;;;;;;;;;x
+butcher;Butcher;Boucher;SchlÃ¤chter;;;;;;;;;;;x
+calm;Calm Â§R-1 Attack;Calme;Ruhig;;;;;;;;;;;x
 careful;Careful;Attentif;Sorgsam;;;;;;;;;;;x
-careless;Careless;Négligent;Achtlos;;;;;;;;;;;x
+careless;Careless;NÃ©gligent;Achtlos;;;;;;;;;;;x
 cartographer;Cartographer;Cartographe;Kartograf;;;;;;;;;;;x
-cautious;Cautious §B+3 Defence;Prudent;Vorsichtig;;;;;;;;;;;x
-cavalry_school;Cavalry School §G+2 Attack;École de cavalerie;Kavallerieschule;;;;;;;;;;;x
+cautious;Cautious Â§B+3 Defence;Prudent;Vorsichtig;;;;;;;;;;;x
+cavalry_school;Cavalry School Â§G+2 Attack;Ã‰cole de cavalerie;Kavallerieschule;;;;;;;;;;;x
 charismatic;Charismatic;Charismatique;Charismatisch;;;;;;;;;;;x
-chickenhearted;Chickenhearted §R-2 Attack;Poltron;Ängstlich;;;;;;;;;;;x
-chivalrous;Chivalrous §G+2 Attack;Courtois;Ritterlich;;;;;;;;;;;x
-choleric;Choleric §W+1 Attack;Colérique;Cholerisch;;;;;;;;;;;x
+chickenhearted;Chickenhearted Â§R-2 Attack;Poltron;Ã„ngstlich;;;;;;;;;;;x
+chivalrous;Chivalrous Â§G+2 Attack;Courtois;Ritterlich;;;;;;;;;;;x
+choleric;Choleric Â§W+1 Attack;ColÃ©rique;Cholerisch;;;;;;;;;;;x
 clever;Clever;Adroit;Clever;;;;;;;;;;;x
-clueless;Clueless §R-1 Defence;Ignorant;Ahnungslos;;;;;;;;;;;x
-colonial_trait;Colonial §R-2 Defence;Colonial;Kolonial;;;;;;;;;;;x
-competent;Competent;Compétent;Kompetent;;;;;;;;;;;x
+clueless;Clueless Â§R-1 Defence;Ignorant;Ahnungslos;;;;;;;;;;;x
+colonial_trait;Colonial Â§R-2 Defence;Colonial;Kolonial;;;;;;;;;;;x
+competent;Competent;CompÃ©tent;Kompetent;;;;;;;;;;;x
 confident;Confident;Confiant;Sicher;;;;;;;;;;;x
-coolminded;Cool-minded §G+2 Defence;Serein;Bedachtsam;;;;;;;;;;;x
+coolminded;Cool-minded Â§G+2 Defence;Serein;Bedachtsam;;;;;;;;;;;x
+compassionate_priest;Compassionate Priest Â§G+1 Attack +2 Defence;;;;;;;;;;;;;x
 corrupt;Corrupt;Corrompu;Korrupt;;;;;;;;;;;x
-coward;Coward;Couard;Kleinmütig;;;;;;;;;;;x
+coward;Coward;Couard;KleinmÃ¼tig;;;;;;;;;;;x
 craven;Craven;Veule;Mutlos;;;;;;;;;;;x
-cursed_luck;Cursed Luck §G+2 Attack §G+2 Defence;Malchanceux;Vom Pech verflucht;;;;;;;;;;;x
-daring;Daring §B+3 Attack;Hardi;Draufgängerisch;;;;;;;;;;;x
-dauntless;Dauntless;Déterminé;Unverzagt;;;;;;;;;;;x
-debutante;Debutante;Débutant;Debütant;;;;;;;;;;;x
+cursed_luck;Cursed Luck Â§G+2 Attack Â§G+2 Defence;Malchanceux;Vom Pech verflucht;;;;;;;;;;;x
+daring;Daring Â§B+3 Attack;Hardi;DraufgÃ¤ngerisch;;;;;;;;;;;x
+dauntless;Dauntless;DÃ©terminÃ©;Unverzagt;;;;;;;;;;;x
+debutante;Debutante;DÃ©butant;DebÃ¼tant;;;;;;;;;;;x
 decisive;Decisive;;;;;;;;;;;;;x
-deeply_religious;Deeply Religious §R-1 Attack -1 Defence;Très croyant;Tief religiös;;;;;;;;;;;x
-defiant;Defiant §B+3 Defence;Provocateur;Trotzig;;;;;;;;;;;x
+deeply_religious;Deeply Religious Â§R-1 Attack -1 Defence;TrÃ¨s croyant;Tief religiÃ¶s;;;;;;;;;;;x
+defiant;Defiant Â§B+3 Defence;Provocateur;Trotzig;;;;;;;;;;;x
 diligent;Diligent;;;;;;;;;;;;;x
 diplomat;Diplomat;Diplomate;Diplomat;;;;;;;;;;;x
 diplomatic;Diplomatic;Diplomate;Diplomatisch;;;;;;;;;;;x
-disciplined;Disciplined §G+2 Attack;Discipliné;Diszipliniert;;;;;;;;;;;x
-disgraced;Disgraced;Déshonoré;In Ungnade Gefallener;;;;;;;;;;;x
-disorderly;Disorderly;Désordonné;Unordentlich;;;;;;;;;;;x
+disciplined;Disciplined Â§G+2 Attack;DisciplinÃ©;Diszipliniert;;;;;;;;;;;x
+disgraced;Disgraced;DÃ©shonorÃ©;In Ungnade Gefallener;;;;;;;;;;;x
+disorderly;Disorderly;DÃ©sordonnÃ©;Unordentlich;;;;;;;;;;;x
 doughty;Doughty;Vaillant;Tapfer;;;;;;;;;;;x
 drillmaster;Drillmaster;Sergent instructeur;Zuchtmeister;;;;;;;;;;;x
-earnest;Earnest;Sérieux;Ernsthaft;;;;;;;;;;;x
-eccentric_genius;Eccentric Genius §G+2 Attack;Génie excentrique;Exzentrisches Genie;;;;;;;;;;;x
-efficient;Efficient §G+2 Attack;Efficace;Effizient;;;;;;;;;;;x
-elderly;Elderly;Âgé;Älter;;;;;;;;;;;x
+earnest;Earnest;SÃ©rieux;Ernsthaft;;;;;;;;;;;x
+eccentric_genius;Eccentric Genius Â§G+2 Attack;GÃ©nie excentrique;Exzentrisches Genie;;;;;;;;;;;x
+efficient;Efficient Â§G+2 Attack;Efficace;Effizient;;;;;;;;;;;x
+elderly;Elderly;Ã‚gÃ©;Ã„lter;;;;;;;;;;;x
 expert;Expert;Expert;Experte;;;;;;;;;;;x
-expert_raider;Expert Raider §G+2 Attack;Commando expérimenté;Überfallexperte;;;;;;;;;;;x
+expert_raider;Expert Raider Â§G+2 Attack;Commando expÃ©rimentÃ©;Ãœberfallexperte;;;;;;;;;;;x
 exranker;Ex-ranker;Ancien militaire;Ex-Gefreiter;;;;;;;;;;;x
 fanatic;Fanatic;Fanatique;Fanatisch;;;;;;;;;;;x
 gallant;Gallant;Courageux;Galant;;;;;;;;;;;x
-generals_aide;General’s Aide §W+1 Defence;Aide de camp;Generalsadjutant;;;;;;;;;;;x
-gifted_administrator;Gifted Administrator;Administrateur doué;Begabter Administrator;;;;;;;;;;;x
-glory_hound;Glory Hound;Ambitieux;Ruhmsüchtig;;;;;;;;;;;x
-gutsy;Gutsy §W+1 Defence;Brave;Waghalsig;;;;;;;;;;;x
-harsh;Harsh §W+1 Attack§! §W+1 Defence;Dur;Harsch;;;;;;;;;;;x
-hated;Hated§W+1 Attack§! §W+1 Defence;Odieux;Gehasst;;;;;;;;;;;x
-hellbent;Hellbent;Acharné;Draufgänger;;;;;;;;;;;x
-heroic;Heroic;Héroïque;Heroisch;;;;;;;;;;;x
+generals_aide;Generalâ€™s Aide Â§W+1 Defence;Aide de camp;Generalsadjutant;;;;;;;;;;;x
+gifted_administrator;Gifted Administrator;Administrateur douÃ©;Begabter Administrator;;;;;;;;;;;x
+glory_hound;Glory Hound;Ambitieux;RuhmsÃ¼chtig;;;;;;;;;;;x
+gutsy;Gutsy Â§W+1 Defence;Brave;Waghalsig;;;;;;;;;;;x
+harsh;Harsh Â§W+1 AttackÂ§! Â§W+1 Defence;Dur;Harsch;;;;;;;;;;;x
+hated;HatedÂ§W+1 AttackÂ§! Â§W+1 Defence;Odieux;Gehasst;;;;;;;;;;;x
+hellbent;Hellbent;AcharnÃ©;DraufgÃ¤nger;;;;;;;;;;;x
+heroic;Heroic;HÃ©roÃ¯que;Heroisch;;;;;;;;;;;x
 immoral;Immoral;Immoral;Unmoralisch;;;;;;;;;;;x
-imperious;Imperious §W+1 Attack §R-2 Defence;Autoritaire;Herrisch;;;;;;;;;;;x
-impetuous;Impetuous §R-2 Defence;Impétueux;Ungestüm;;;;;;;;;;;x
+imperious;Imperious Â§W+1 Attack Â§R-2 Defence;Autoritaire;Herrisch;;;;;;;;;;;x
+impetuous;Impetuous Â§R-2 Defence;ImpÃ©tueux;UngestÃ¼m;;;;;;;;;;;x
 implacable;Implacable;Implacable;Unerbittlich;;;;;;;;;;;x
 impulsive;Impulsive;Impulsif;Impulsiv;;;;;;;;;;;x
-incapable;Incapable;Incapable;Unfähig;;;;;;;;;;;x
-incompetent;Incompetent;Incompétent;Inkompetent;;;;;;;;;;;x
-indifferent;Indifferent;Indifférent;Gleichgültig;;;;;;;;;;;x
-inefficient;Inefficient §R-2 Attack;Inefficace;Ineffizient;;;;;;;;;;;x
-inept;Inept §R-1 Attack;Inepte;Untauglich;;;;;;;;;;;x
-innovative_tactician;Innovative Tactician §W+1 Attack;Tacticien novateur;Innovativer Taktiker;;;;;;;;;;;x
+incapable;Incapable;Incapable;UnfÃ¤hig;;;;;;;;;;;x
+incompetent;Incompetent;IncompÃ©tent;Inkompetent;;;;;;;;;;;x
+indifferent;Indifferent;IndiffÃ©rent;GleichgÃ¼ltig;;;;;;;;;;;x
+inefficient;Inefficient Â§R-2 Attack;Inefficace;Ineffizient;;;;;;;;;;;x
+inept;Inept Â§R-1 Attack;Inepte;Untauglich;;;;;;;;;;;x
+innovative_tactician;Innovative Tactician Â§W+1 Attack;Tacticien novateur;Innovativer Taktiker;;;;;;;;;;;x
 inspiring;Inspiring;Stimulant;Inspirierend;;;;;;;;;;;x
 intelligent;Intelligent;Intelligent;Intelligent;;;;;;;;;;;x
 intuitive;Intuitive;Intuitif;Intuitiv;;;;;;;;;;;x
-irate;Irate §W+1 Attack;Furieux;Aufbrausend;;;;;;;;;;;x
+irate;Irate Â§W+1 Attack;Furieux;Aufbrausend;;;;;;;;;;;x
 keen;Keen;Enthousiaste;Gewitzt;;;;;;;;;;;x
 lackluster;Lacklustre;Terne;Lustlos;;;;;;;;;;;x
-lilylivered;Lily-livered §R-2 Attack;Froussard;Feige;;;;;;;;;;;x
+lilylivered;Lily-livered Â§R-2 Attack;Froussard;Feige;;;;;;;;;;;x
 madman;Madman;Fou;Irrer;;;;;;;;;;;x
 maladroit;Maladroit;Maladroit;Unbeholfen;;;;;;;;;;;x
-manful;Manful;Ardent;Männlich;;;;;;;;;;;x
-mediocre;Mediocre;Médiocre;Mittelmäßig;;;;;;;;;;;x
-megalomaniac;Megalomaniac §R-2 Attack;Mégalomane;Megalomane;;;;;;;;;;;x
-merciless;Merciless §G+2 Attack §G+2 Defence;Impitoyable;Gnadenlos;;;;;;;;;;;x
-meticulous;Meticulous §B+1 Attack §R- 0.1 Speed;Méticuleux;Genau;;;;;;;;;;;x
-nationalist;Nationalist §W+1 Attack;;;;;;;;;;;;;x
-natural_born_leader;Natural Born Leader §W+1 Attack;Leader naturel;Geborener Anführer;;;;;;;;;;;x
-no_background §R-2 Attack §R-2 Defence;No Background;Aucun(e);Nichts;;;;;;;;;;;x
+manful;Manful;Ardent;MÃ¤nnlich;;;;;;;;;;;x
+mediocre;Mediocre;MÃ©diocre;MittelmÃ¤ÃŸig;;;;;;;;;;;x
+megalomaniac;Megalomaniac Â§R-2 Attack;MÃ©galomane;Megalomane;;;;;;;;;;;x
+merciless;Merciless Â§G+2 Attack Â§G+2 Defence;Impitoyable;Gnadenlos;;;;;;;;;;;x
+meticulous;Meticulous Â§B+1 Attack Â§R- 0.1 Speed;MÃ©ticuleux;Genau;;;;;;;;;;;x
+nationalist;Nationalist Â§W+2 Attack;;;;;;;;;;;;;x
+natural_born_leader;Natural Born Leader Â§W+1 Attack;Leader naturel;Geborener AnfÃ¼hrer;;;;;;;;;;;x
+no_background Â§R-2 Attack Â§R-2 Defence;No Background;Aucun(e);Nichts;;;;;;;;;;;x
 no_personality;No Personality;Aucune;Nichts;;;;;;;;;;;x
-old_school;Old School §W+1 Attack §R-2 Defence;Vieille école;Alte Schule;;;;;;;;;;;x
+old_school;Old School Â§W+1 Attack Â§R-2 Defence;Vieille Ã©cole;Alte Schule;;;;;;;;;;;x
 openminded;Openminded;Ouvert d'esprit;Offen;;;;;;;;;;;x
 pawn;Pawn;Pion;Pfand;;;;;;;;;;;x
-persistant;Persistent;Persévérant;Hartnäckig;;;;;;;;;;;x
-perverse;Perverse;Entêté;Pervers;;;;;;;;;;;x
+persistant;Persistent;PersÃ©vÃ©rant;HartnÃ¤ckig;;;;;;;;;;;x
+perverse;Perverse;EntÃªtÃ©;Pervers;;;;;;;;;;;x
 pessimist;Pessimist;;;;;;;;;;;;;x
-pisspoor;Piss-poor §R-2 Attack;Pitoyable;Arm;;;;;;;;;;;x
-poet;Poet §R-1 Attack;Poète;Poet;;;;;;;;;;;x
-polite;Polite;Poli;Höflich;;;;;;;;;;;x
+pisspoor;Piss-poor Â§R-2 Attack;Pitoyable;Arm;;;;;;;;;;;x
+poet;Poet Â§R-1 Attack;PoÃ¨te;Poet;;;;;;;;;;;x
+polite;Polite;Poli;HÃ¶flich;;;;;;;;;;;x
 politician;Politician;Politicien;Politiker;;;;;;;;;;;x
-powerful_friends;Powerful Friends;Amis puissants;Mächtige Freunde;;;;;;;;;;;x
-priest;Priest;Prêtre;Priester;;;;;;;;;;;x
-professor;Professor §R-1 Attack §R-2 Defence;Professeur;Professor;;;;;;;;;;;x
+powerful_friends;Powerful Friends;Amis puissants;MÃ¤chtige Freunde;;;;;;;;;;;x
+priest;Priest;PrÃªtre;Priester;;;;;;;;;;;x
+professor;Professor Â§R-1 Attack Â§R-2 Defence;Professeur;Professor;;;;;;;;;;;x
 pusillanimous;Pusillanimous;Pusillanime;Verzagt;;;;;;;;;;;x
-relentless;Relentless §G+2 Attack;Implacable;Unbarmherzig;;;;;;;;;;;x
-reserved;Reserved §R-1 Attack;Réservé;Reserviert;;;;;;;;;;;x
-resolute;Resolute §G+2 Defence;Résolu;Resolut;;;;;;;;;;;x
-resourceful;Resourceful§R-1 Defence;Ingénieux;Findig;;;;;;;;;;;x
-rising_star;Rising Star;Étoile montante;Aufsteigender Stern;;;;;;;;;;;x
+relentless;Relentless Â§G+2 Attack;Implacable;Unbarmherzig;;;;;;;;;;;x
+reserved;Reserved Â§R-1 Attack;RÃ©servÃ©;Reserviert;;;;;;;;;;;x
+resolute;Resolute Â§G+2 Defence;RÃ©solu;Resolut;;;;;;;;;;;x
+resourceful;ResourcefulÂ§R-1 Defence;IngÃ©nieux;Findig;;;;;;;;;;;x
+rising_star;Rising Star;Ã‰toile montante;Aufsteigender Stern;;;;;;;;;;;x
 romantic;Romantic;Romantique;Romantisch;;;;;;;;;;;x
-sad_sack;Sad Sack§R-2 Attack;Raté;Trauriger Sack;;;;;;;;;;;x
-scared;Scared §R-1 Defence;Craintif;Verängstigt;;;;;;;;;;;x
-school_of_defense;School of Defence §B+3 Defence;École de défense;Schule der Verteidigung;;;;;;;;;;;x
-school_of_firepower;School of Firepower §W+1 Attack;École de la puissance de feu;Schule der Feuerkraft;;Escuela de la potencia de fuego;;;;;;;;;x
-school_of_offense;School of Offense §W+1 Attack;École d'attaque;Schule der Offensive;;;;;;;;;;;x
-school_of_the_bayonet;School of the Bayonet §G+2 Attack §W+1 Defence;École de la baïonnette;Schule des Bajonetts;;;;;;;;;;;x
+sad_sack;Sad SackÂ§R-2 Attack;RatÃ©;Trauriger Sack;;;;;;;;;;;x
+scared;Scared Â§R-1 Defence;Craintif;VerÃ¤ngstigt;;;;;;;;;;;x
+school_of_defense;School of Defence Â§B+3 Defence;Ã‰cole de dÃ©fense;Schule der Verteidigung;;;;;;;;;;;x
+school_of_firepower;School of Firepower Â§W+1 Attack;Ã‰cole de la puissance de feu;Schule der Feuerkraft;;Escuela de la potencia de fuego;;;;;;;;;x
+school_of_offense;School of Offense Â§W+1 Attack;Ã‰cole d'attaque;Schule der Offensive;;;;;;;;;;;x
+school_of_the_bayonet;School of the Bayonet Â§G+2 Attack Â§W+1 Defence;Ã‰cole de la baÃ¯onnette;Schule des Bajonetts;;;;;;;;;;;x
 secretive;Secretive;;;;;;;;;;;;;x
 sharp;Sharp;Malin;Klug;;;;;;;;;;;x
-shirker;Shirker §R-1 Defence;Tire-au-flanc;Drückeberger;;;;;;;;;;;x
-shrinking_violet;Shrinking Violet;Timoré;Mauerblümchen;;;;;;;;;;;x
-skilled;Skilled §W+1 Attack;Talentueux;Geschickt;;;;;;;;;;;x
+shirker;Shirker Â§R-1 Defence;Tire-au-flanc;DrÃ¼ckeberger;;;;;;;;;;;x
+shrinking_violet;Shrinking Violet;TimorÃ©;MauerblÃ¼mchen;;;;;;;;;;;x
+skilled;Skilled Â§W+1 Attack;Talentueux;Geschickt;;;;;;;;;;;x
 smart_p;Smart;Habile;Schlau;;;;;;;;;;;x
-soft;Soft §R-2 Attack;Indolent;Weich;;;;;;;;;;;x
-soldierly;Soldierly §W+1 Attack;Militaire;Soldatisch;;;;;;;;;;;x
-spineless;Spineless §R-2 Attack;Mou;Rückgratlos;;;;;;;;;;;x
-spirited;Spirited §G+2 Defence;Fougueux;Sprühend;;;;;;;;;;;x
-spoiled;Spoiled §G+2 Attack;Gâté;Verwöhnt;;;;;;;;;;;x
-stalwart;Stalwart §W+1 Attack§! §W+1 Defence;Robuste;Robust;;;;;;;;;;;x
-steadfast;Steadfast §G+2 Attack;Inébranlable;Solide;;;;;;;;;;;x
-stout;Stout §W+1 Defence;Solide;Beherzt;;;;;;;;;;;x
-stouthearted;Stout-hearted §W+1 Attack;Intrépide;Beherzt;;;;;;;;;;;x
-strange;Strange;Étrange;Merkwürdig;;;;;;;;;;;x
-sucker;Sucker§R-1 Attack;Gogo;Trottel;;;;;;;;;;;x
+soft;Soft Â§R-2 Attack;Indolent;Weich;;;;;;;;;;;x
+soldierly;Soldierly Â§W+1 Attack;Militaire;Soldatisch;;;;;;;;;;;x
+spineless;Spineless Â§R-2 Attack;Mou;RÃ¼ckgratlos;;;;;;;;;;;x
+spirited;Spirited Â§G+2 Defence;Fougueux;SprÃ¼hend;;;;;;;;;;;x
+spoiled;Spoiled Â§G+2 Attack;GÃ¢tÃ©;VerwÃ¶hnt;;;;;;;;;;;x
+stalwart;Stalwart Â§W+1 AttackÂ§! Â§W+1 Defence;Robuste;Robust;;;;;;;;;;;x
+steadfast;Steadfast Â§G+2 Attack;InÃ©branlable;Solide;;;;;;;;;;;x
+stout;Stout Â§W+1 Defence;Solide;Beherzt;;;;;;;;;;;x
+stouthearted;Stout-hearted Â§W+1 Attack;IntrÃ©pide;Beherzt;;;;;;;;;;;x
+strange;Strange;Ã‰trange;MerkwÃ¼rdig;;;;;;;;;;;x
+sucker;SuckerÂ§R-1 Attack;Gogo;Trottel;;;;;;;;;;;x
 sycophant;Sycophant;Flagorneur;Kriecher;;;;;;;;;;;x
-tactful;Tactful;Délicat;Taktvoll;;;;;;;;;;;x
-timid;Timid §R-1 Attack;Timide;Furchtsam;;;;;;;;;;;x
-toady;Toady §W+1 Attack;Flatteur;Schleimer;;;;;;;;;;;x
-uncommonly_young;Uncommonly Young §W+1 Attack§! §W+1 Defence;Singulièrement jeune;Ungewöhnlich jung;;;;;;;;;;;x
-undisciplined;Undisciplined;Indiscipliné;Undiszipliniert;;;;;;;;;;;x
-unfit;Unfit§R-2 Attack;Inapte;Ungeeignet;;;;;;;;;;;x
-unflinching;Unflinching §B+3 Attack;Opiniâtre;Entschlossen;;;;;;;;;;;x
-unmanly;Unmanly §R-4 Attack;Lâche;Unmännlich;;;;;;;;;;;x
-unqualified;Unqualified;Non qualifié;Unqualifiziert;;;;;;;;;;;x
+tactful;Tactful;DÃ©licat;Taktvoll;;;;;;;;;;;x
+timid;Timid Â§R-1 Attack;Timide;Furchtsam;;;;;;;;;;;x
+toady;Toady Â§W+1 Attack;Flatteur;Schleimer;;;;;;;;;;;x
+uncommonly_young;Uncommonly Young Â§W+1 AttackÂ§! Â§W+1 Defence;SinguliÃ¨rement jeune;UngewÃ¶hnlich jung;;;;;;;;;;;x
+undisciplined;Undisciplined;IndisciplinÃ©;Undiszipliniert;;;;;;;;;;;x
+unfit;UnfitÂ§R-2 Attack;Inapte;Ungeeignet;;;;;;;;;;;x
+unflinching;Unflinching Â§B+3 Attack;OpiniÃ¢tre;Entschlossen;;;;;;;;;;;x
+unmanly;Unmanly Â§R-4 Attack;LÃ¢che;UnmÃ¤nnlich;;;;;;;;;;;x
+unqualified;Unqualified;Non qualifiÃ©;Unqualifiziert;;;;;;;;;;;x
 unruly;Unruly;Insoumis;Widerborstig;;;;;;;;;;;x
-unsound;Unsound;Dangereux;Unzuverlässig;;;;;;;;;;;x
+unsound;Unsound;Dangereux;UnzuverlÃ¤ssig;;;;;;;;;;;x
 vainglorious;Vainglorious;Vaniteux;Prahlerisch;;;;;;;;;;;x
-vicious;Vicious §G+2 Attack;Violent;Bösartig;;;;;;;;;;;x
-war_college;War College §W+1 Attack;École militaire;Militärakademie;;;;;;;;;;;x
+vicious;Vicious Â§G+2 Attack;Violent;BÃ¶sartig;;;;;;;;;;;x
+war_college;War College Â§W+1 Attack;Ã‰cole militaire;MilitÃ¤rakademie;;;;;;;;;;;x
 warmonger;Warmonger;Belliciste;Kriegstreiber;;;;;;;;;;;x
-womanizer;Womanizer;Coureur de jupons;Schürzenjäger;;;;;;;;;;;x
-wrathful;Wrathful §G+2 Attack;Courroucé;Zornerfüllt;;;;;;;;;;;x
-wretched;Wretched §R-1 Attack;Misérable;Jämmerlich;;;;;;;;;;;x
-yellow;Yellow §R-4 Attack;Trouillard;Memme;;;;;;;;;;;x
-yesman;Yes-man;Béni-oui-oui;Jasager;;;;;;;;;;;x
+womanizer;Womanizer;Coureur de jupons;SchÃ¼rzenjÃ¤ger;;;;;;;;;;;x
+wrathful;Wrathful Â§G+2 Attack;CourroucÃ©;ZornerfÃ¼llt;;;;;;;;;;;x
+wretched;Wretched Â§R-1 Attack;MisÃ©rable;JÃ¤mmerlich;;;;;;;;;;;x
+yellow;Yellow Â§R-4 Attack;Trouillard;Memme;;;;;;;;;;;x
+yesman;Yes-man;BÃ©ni-oui-oui;Jasager;;;;;;;;;;;x
+young_genius;Young Genius Â§G+2 Attack +2 Defence;;;;;;;;;;;;;x
