--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -516,7 +516,7 @@ PROV514;Málaga;;;;;;;;;;;;;x
 PROV515;Almería;;;;;;;;;;;;;x
 PROV516;Jaén;;;;;;;;;;;;;x
 PROV517;Gibraltar;;;;;;;;;;;;;x
-PROV518;Porto;;;;;;;;;;;;;x
+PROV518;Braga;;;;;;;;;;;;;x
 PROV519;Vila Real;;;;;;;;;;;;;x
 PROV520;Covilhã;;;;;;;;;;;;;x
 PROV521;Lisboa;;;;;;;;;;;;;x
