--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -73,6 +73,7 @@ EVTDESC66;\n§BBorder Control options:§! Allow you to pick a different border p
 EVTOPTA66;Border Control options;;;;;;;;;;;;;x
 EVTOPTB66;RGO Change Menu (Mining);;;;;;;;;;;;;x
 EVTOPTC66;RGO Change Menu (Farming);;;;;;;;;;;;;x
+EVTOPTD66;Music Mod Options;;;;;;;;;;;;;x
 EVTNAME67;Border Control options;;;;;;;;;;;;;x
 EVTDESC67;Pick whatever policy you want, but be aware: You will only be able to do that again after the §RLaw Changed by Force§! modifier goes away.;;;;;;;;;;;;;x
 EVTOPTA67;Open the borders.;;;;;;;;;;;;;x
@@ -117,9 +118,23 @@ EVTOPTB73;Louis-Napoleon always Coups (Default: §RDisabled§!);;;;;;;;;;;;;x
 EVTOPTC73;Bypass French Revolution Requirements (Default: §RDisabled§!);;;;;;;;;;;;;x
 EVTOPTD73;Bypass Scramble for China Requirements (Default: §RDisabled§!);;;;;;;;;;;;;x
 EVTOPTE73;Close;;;;;;;;;;;;;x
-EVTNAME65X; ;;;;;;;;;;;;;x
-EVTDESC65X; ;;;;;;;;;;;;;x
-EVTOPTA65X; ;;;;;;;;;;;;;x
-EVTOPTB65X; ;;;;;;;;;;;;;x
-EVTOPTC65X; ;;;;;;;;;;;;;x
-EVTOPTD65X; ;;;;;;;;;;;;;x
+EVTNAME74;The Grand Orchestra Menu, 1/3;;;;;;;;;;;;;x
+EVTDESC74;§BEnable all songs:§! This option will enable all songs to play, ignoring all requirements. This includes cultural, non-cultural and war requirements, each requeriment can be re-adjusted later.\n§BBypass non-cultural requirements:§! This option will bypass non-cultural requirements like year, being a great power, industrial score, which some songs have to play.\n§BBypass warsong requirements: §!This option will make so war songs will play during peace time, the reverse is also true, as peace songs will play during war time.\n§BEnable Japanese Playlist:§! This option will make so the exclusive Japanese Playlist plays for any country, mixed with the other songs enabled for this country.;;;;;;;;;;;;;x
+EVTOPTA74;Enable all songs;;;;;;;;;;;;;x
+EVTOPTB74;Bypass non-cultural requirements;;;;;;;;;;;;;x
+EVTOPTC74;Bypass warsongs requirements;;;;;;;;;;;;;x
+EVTOPTD74;Japanese Playlist Enabled;;;;;;;;;;;;;x
+EVTNAME74NOTGO;No TGO found!;;;;;;;;;;;;;x
+EVTDESC74NOTGO;It seems you don't have The Grand Orchestra submod active!\n\n You can download it at \n§Bhttps://github.com/The-Grand-Combination/The-Grand-Orchestra§!;;;;;;;;;;;;;x
+EVTOPTA74NOTGO;Oh, sorry!;;;;;;;;;;;;;x
+EVTNAME75;The Grand Orchestra Menu, 2/3;;;;;;;;;;;;;x
+EVTDESC75;§BGeneric songs enabled:§! Enables the default playlist to play to any country, this is pretty much only to asian countries who would otherwise have an exclusive playlist.\n\n§BBrazilian songs enabled:§! Enables brazil-exclusive songs to play. Most brazilian songs are already integrated into the default playlist, so this will have little, but some, effect.\n\n§BBolivian songs enabled:§! Enables bolivia-exclusive songs to play.\n\n§BPeruvian songs enabled:§! Enables peru-exclusive songs to play.;;;;;;;;;;;;;x
+EVTOPTA75;Generic songs enabled;;;;;;;;;;;;;x
+EVTOPTB75;Brazilian songs enabled;;;;;;;;;;;;;x
+EVTOPTC75;Bolivian songs enabled;;;;;;;;;;;;;x
+EVTOPTD75;Peruvian songs enabled;;;;;;;;;;;;;x
+EVTNAME76;The Grand Orchestra Menu, 3/3 ;;;;;;;;;;;;;x
+EVTDESC76;§BArgentinean songs enabled:§! Enables argentina-exclusive songs to play. Most Argentinean songs are already integrated into the default playlist, but they play less often than normal if you're not Argentina.\n\n§BJapanese Playlist Only:§! The Japanese playlist is extremely well curated, you may wish to only listen to it. This will mute all other songs.;;;;;;;;;;;;;x
+EVTOPTA76;Argentinean songs enabled;;;;;;;;;;;;;x
+EVTOPTB76;Japanese only playlist mode;;;;;;;;;;;;;x
+
